--- a/build.html
+++ b/build.html
@@ -1,1 +1,3 @@
-<fl-helper name="code-generator" data-widget-name="code-generator" data-helper-code-generator-id="{{id}}" data-code-generator-id="{{id}}"></fl-helper>
+<fl-helper name="code-generator" data-widget-name="code-generator" data-helper-code-generator-id="{{id}}" data-code-generator-id="{{id}}">
+    <div class="code-generator-container"></div>
+</fl-helper>
