--- a/build.html
+++ b/build.html
@@ -1,1 +1,1 @@
-<fl-helper name="code-generator" data-widget-name="code-generator" data-helper-code-generator-id="{{id}}" data-code-generator-id="{{id}}"></fl-helper>
+<fl-helper name="code-generator-dev" data-widget-name="code-generator-dev" data-helper-code-generator-dev-id="{{id}}" data-code-generator-dev-id="{{id}}"></fl-helper>
