--- a/build.html
+++ b/build.html
@@ -1,1 +1,3 @@
-<fl-helper name="code-generator-dev" data-widget-name="code-generator-dev" data-helper-code-generator-dev-id="{{id}}" data-code-generator-dev-id="{{id}}"></fl-helper>
+<fl-helper name="code-generator-dev" data-widget-name="code-generator-dev" data-helper-code-generator-dev-id="{{id}}" data-code-generator-dev-id="{{id}}">
+    {{{ css }}}
+</fl-helper>
