--- a/build.html
+++ b/build.html
@@ -1,1 +1,6 @@
-<fl-helper name="code-generator-dev" data-widget-name="code-generator-dev" data-helper-code-generator-dev-id="{{id}}" data-code-generator-dev-id="{{id}}"></fl-helper>
+<fl-helper
+  name="ai-feature"
+  data-widget-name="ai-feature"
+  data-helper-ai-feature-id="{{id}}"
+  data-ai-feature-id="{{id}}"
+></fl-helper>
